// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListGroup Tests rendering the ListGroup component Test renders the ListGroup component with groupItems prop as false 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginVertical": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1977d3",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 10,
      }
    }
  >
    <CollapsibleCard
      isOpened={true}
      title="AbAR-2"
      toggleIsOpened={[Function]}
    />
  </View>
  <View>
    <FlatList
      data={
        Array [
          Object {
            "assignedAssociate": "Associate 1",
            "category": 71,
            "createTS": "10:32 AM 02/04/2022",
            "createdBy": "Associate 1",
            "id": 418,
            "itemDesc": "Teapot",
            "itemNbr": 734,
            "moveToFront": true,
            "palletId": 4321,
            "palletLocationId": 1672,
            "palletLocationName": "C1-2",
            "quickPick": false,
            "salesFloorLocationId": 1673,
            "salesFloorLocationName": "C1-3",
            "status": "accepted pick",
            "upcNbr": "000041800003",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={true}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
    <FlatList
      data={
        Array [
          Object {
            "assignedAssociate": "Associate 1",
            "category": 71,
            "createTS": "4:25 PM 02/09/2022",
            "createdBy": "Manager 1",
            "id": 3,
            "itemDesc": "Swiffer",
            "itemNbr": 845,
            "moveToFront": true,
            "palletId": 5432,
            "palletLocationId": 2345,
            "palletLocationName": "BREW1-2",
            "quickPick": false,
            "salesFloorLocationId": 2345,
            "salesFloorLocationName": "BREW1-2",
            "status": "accepted pick",
            "upcNbr": "000052900004",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={true}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
</View>
`;

exports[`ListGroup Tests rendering the ListGroup component Test renders the ListGroup component with groupItems prop as true 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginVertical": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1977d3",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 10,
      }
    }
  >
    <CollapsibleCard
      isOpened={true}
      title="AbAR-2"
      toggleIsOpened={[Function]}
    />
  </View>
  <View>
    <FlatList
      disableVirtualization={false}
      horizontal={true}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
    <FlatList
      disableVirtualization={false}
      horizontal={true}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
</View>
`;
